Зробив блок "якості"

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
           <h2 hidden>Качества</h2>
           <ul class="quality-list list">
             <li class="quality-item">
-              <div class="icon-wrapper">
-                <img src="./img/antenna-1.svg" alt="antenna" />
+              <div class="icon-wrapper icon-1">
+                <!--<img src="./img/antenna-1.svg" alt="antenna" />-->
               </div>
               <h3 class="quality-list-item">Внимание к деталям</h3>
               <p class="discription-text">
@@ -96,8 +96,8 @@
               </p>
             </li>
             <li class="quality-item">
-              <div class="icon-wrapper">
-                <img src="./img/clock-1.svg" alt="Часы" />
+              <div class="icon-wrapper icon-2">
+                <!--<img src="./img/clock-1.svg" alt="Часы" />-->
               </div>
               <h3 class="quality-list-item">Пунктуальность</h3>
               <p class="discription-text">
@@ -106,8 +106,8 @@
               </p>
             </li>
             <li class="quality-item">
-              <div class="icon-wrapper">
-                <img src="./img/diagram-1.svg" alt="Диаграмма" />
+              <div class="icon-wrapper icon-3">
+                <!--<img src="./img/diagram-1.svg" alt="Диаграмма" />-->
               </div>
               <h3 class="quality-list-item">Планирование</h3>
               <p class="discription-text">
@@ -116,8 +116,8 @@
               </p>
             </li>
             <li class="quality-item">
-              <div class="icon-wrapper">
-                <img src="./img/astronaut-1.svg" alt="Астронавт" />
+              <div class="icon-wrapper icon-4">
+                <!--<img src="./img/astronaut-1.svg" alt="Астронавт" />-->
               </div>
               <h3 class="quality-list-item">Современные технологии</h3>
               <p class="discription-text">
