--- a/portfolio.html
+++ b/portfolio.html
@@ -38,21 +38,17 @@
         <div class="header-contacts">
           <ul class="contacts-ul">
             <li class="contacts-item">
-              <img
-                class="contacts-icon"
-                src="./img/envelope.svg"
-                alt="phone-icon"
-              />
+              <svg class="contacts-icon">
+                <use href="./img/icomoon/sprite.svg#icon-envelope-hover"></use>
+              </svg>
               <a href="mailto:info@devstudio.com" class="contacts-item-link"
                 >info@devstudio.com</a
               >
             </li>
             <li class="contacts-item">
-              <img
-                class="contacts-icon"
-                src="./img/smartphone.svg"
-                alt="mail-icon"
-              />
+              <svg class="contacts-icon">
+                <use href="./img/icomoon/sprite.svg#icon-smartphone"></use>
+              </svg>
               <a href="tel:380961111111" class="contacts-item-link"
                 >+38 096 111 11 11</a
               >
