--- a/index.html
+++ b/index.html
@@ -38,21 +38,17 @@
         <div class="header-contacts">
           <ul class="contacts-ul">
             <li class="contacts-item">
-              <img
-                class="contacts-icon"
-                src="./img/envelope.svg"
-                alt="phone-icon"
-              />
+              <svg class="contacts-icon">
+                <use href="./img/icomoon/sprite.svg#icon-envelope-hover"></use>
+              </svg>
               <a href="mailto:info@devstudio.com" class="contacts-item-link"
                 >info@devstudio.com</a
               >
             </li>
             <li class="contacts-item">
-              <img
-                class="contacts-icon"
-                src="./img/smartphone.svg"
-                alt="mail-icon"
-              />
+              <svg class="contacts-icon">
+                <use href="./img/icomoon/sprite.svg#icon-smartphone"></use>
+              </svg>
               <a href="tel:380961111111" class="contacts-item-link"
                 >+38 096 111 11 11</a
               >
@@ -179,7 +175,9 @@
                     href=""
                     aria-label="Ссылка на Instagram"
                   >
-                    <img src="./img/socialicon/instagram.svg" alt="Instagram" />
+                    <svg class="social-icons-svg" width="20" height="20"> 
+                      <use href="./img/icomoon/sprite.svg#icon-instagram"></use>
+                    </svg>
                   </a>
                 </li>
                 <li class="social-list-item">
@@ -188,10 +186,10 @@
                     href=""
                     aria-label="Ссылка на Tvitter"
                   >
-                    <img
-                      src="./img/socialicon/vector-twitter.svg"
-                      alt="Tvitter"
-                    />
+                    <svg class="social-icons-svg" width="20" height="20">
+                      <use href="./img/icomoon/sprite.svg#icon-twitter"></use>
+                    </svg>
+                    </a>
                   </a>
                 </li>
                 <li class="social-list-item">
@@ -200,7 +198,9 @@
                     href=""
                     aria-label="Ссылка на Facebook"
                   >
-                    <img src="./img/socialicon/facebook.svg" alt="Facebook" />
+                    <svg class="social-icons-svg" width="20" height="20">
+                      <use href="./img/icomoon/sprite.svg#icon-facebook"></use>
+                    </svg>
                   </a>
                 </li>
                 <li class="social-list-item">
@@ -209,8 +209,10 @@
                     href=""
                     aria-label="Ссылка на LinkID"
                   >
-                    <img src="./img/socialicon/linkedin.svg" alt="LinkID"
-                  /></a>
+                <svg class="social-icons-svg" width="20" height="20">
+                  <use href="./img/icomoon/sprite.svg#icon-linkedin"></use>
+                </svg>
+                </a>
                 </li>
               </ul>
             </li>
