svg блоку наша команда -зроблено

--- a/index.html
+++ b/index.html
@@ -38,19 +38,21 @@
         <div class="header-contacts">
           <ul class="contacts-ul">
             <li class="contacts-item">
-              <svg class="contacts-icon">
-                <use href="./img/icomoon/sprite.svg#icon-envelope-hover"></use>
-              </svg>
-              <a href="mailto:info@devstudio.com" class="contacts-item-link"
-                >info@devstudio.com</a
+              <a href="mailto:info@devstudio.com" class="contacts-item-link">
+                <svg class="contacts-icon">
+                  <use
+                    href="./img/icomoon/sprite.svg#icon-envelope-hover"
+                  ></use>
+                </svg>
+                info@devstudio.com</a
               >
             </li>
             <li class="contacts-item">
-              <svg class="contacts-icon">
-                <use href="./img/icomoon/sprite.svg#icon-smartphone"></use>
-              </svg>
-              <a href="tel:380961111111" class="contacts-item-link"
-                >+38 096 111 11 11</a
+              <a href="tel:380961111111" class="contacts-item-link">
+                <svg class="contacts-icon">
+                  <use href="./img/icomoon/sprite.svg#icon-smartphone"></use>
+                </svg>
+                +38 096 111 11 11</a
               >
             </li>
           </ul>
@@ -175,7 +177,7 @@
                     href=""
                     aria-label="Ссылка на Instagram"
                   >
-                    <svg class="social-icons-svg" width="20" height="20"> 
+                    <svg class="social-icons-svg" width="20" height="20">
                       <use href="./img/icomoon/sprite.svg#icon-instagram"></use>
                     </svg>
                   </a>
@@ -189,7 +191,6 @@
                     <svg class="social-icons-svg" width="20" height="20">
                       <use href="./img/icomoon/sprite.svg#icon-twitter"></use>
                     </svg>
-                    </a>
                   </a>
                 </li>
                 <li class="social-list-item">
@@ -209,10 +210,10 @@
                     href=""
                     aria-label="Ссылка на LinkID"
                   >
-                <svg class="social-icons-svg" width="20" height="20">
-                  <use href="./img/icomoon/sprite.svg#icon-linkedin"></use>
-                </svg>
-                </a>
+                    <svg class="social-icons-svg" width="20" height="20">
+                      <use href="./img/icomoon/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -233,7 +234,9 @@
                     href=""
                     aria-label="Ссылка на Instagram"
                   >
-                    <img src="./img/socialicon/instagram.svg" alt="Instagram" />
+                    <svg class="social-icons-svg" width="20" height="20">
+                      <use href="./img/icomoon/sprite.svg#icon-instagram"></use>
+                    </svg>
                   </a>
                 </li>
                 <li class="social-list-item">
@@ -242,10 +245,9 @@
                     href=""
                     aria-label="Ссылка на Tvitter"
                   >
-                    <img
-                      src="./img/socialicon/vector-twitter.svg"
-                      alt="Tvitter"
-                    />
+                    <svg class="social-icons-svg" width="20" height="20">
+                      <use href="./img/icomoon/sprite.svg#icon-twitter"></use>
+                    </svg>
                   </a>
                 </li>
                 <li class="social-list-item">
@@ -254,7 +256,9 @@
                     href=""
                     aria-label="Ссылка на Facebook"
                   >
-                    <img src="./img/socialicon/facebook.svg" alt="Facebook" />
+                    <svg class="social-icons-svg" width="20" height="20">
+                      <use href="./img/icomoon/sprite.svg#icon-facebook"></use>
+                    </svg>
                   </a>
                 </li>
                 <li class="social-list-item">
@@ -263,8 +267,10 @@
                     href=""
                     aria-label="Ссылка на LinkID"
                   >
-                    <img src="./img/socialicon/linkedin.svg" alt="LinkID"
-                  /></a>
+                    <svg class="social-icons-svg" width="20" height="20">
+                      <use href="./img/icomoon/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -285,7 +291,9 @@
                     href=""
                     aria-label="Ссылка на Instagram"
                   >
-                    <img src="./img/socialicon/instagram.svg" alt="Instagram" />
+                    <svg class="social-icons-svg" width="20" height="20">
+                      <use href="./img/icomoon/sprite.svg#icon-instagram"></use>
+                    </svg>
                   </a>
                 </li>
                 <li class="social-list-item">
@@ -294,10 +302,9 @@
                     href=""
                     aria-label="Ссылка на Tvitter"
                   >
-                    <img
-                      src="./img/socialicon/vector-twitter.svg"
-                      alt="Tvitter"
-                    />
+                    <svg class="social-icons-svg" width="20" height="20">
+                      <use href="./img/icomoon/sprite.svg#icon-twitter"></use>
+                    </svg>
                   </a>
                 </li>
                 <li class="social-list-item">
@@ -306,7 +313,9 @@
                     href=""
                     aria-label="Ссылка на Facebook"
                   >
-                    <img src="./img/socialicon/facebook.svg" alt="Facebook" />
+                    <svg class="social-icons-svg" width="20" height="20">
+                      <use href="./img/icomoon/sprite.svg#icon-facebook"></use>
+                    </svg>
                   </a>
                 </li>
                 <li class="social-list-item">
@@ -315,8 +324,10 @@
                     href=""
                     aria-label="Ссылка на LinkID"
                   >
-                    <img src="./img/socialicon/linkedin.svg" alt="LinkID"
-                  /></a>
+                    <svg class="social-icons-svg" width="20" height="20">
+                      <use href="./img/icomoon/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -337,7 +348,9 @@
                     href=""
                     aria-label="Ссылка на Instagram"
                   >
-                    <img src="./img/socialicon/instagram.svg" alt="Instagram" />
+                    <svg class="social-icons-svg" width="20" height="20">
+                      <use href="./img/icomoon/sprite.svg#icon-instagram"></use>
+                    </svg>
                   </a>
                 </li>
                 <li class="social-list-item">
@@ -346,10 +359,9 @@
                     href=""
                     aria-label="Ссылка на Tvitter"
                   >
-                    <img
-                      src="./img/socialicon/vector-twitter.svg"
-                      alt="Tvitter"
-                    />
+                    <svg class="social-icons-svg" width="20" height="20">
+                      <use href="./img/icomoon/sprite.svg#icon-twitter"></use>
+                    </svg>
                   </a>
                 </li>
                 <li class="social-list-item">
@@ -358,7 +370,9 @@
                     href=""
                     aria-label="Ссылка на Facebook"
                   >
-                    <img src="./img/socialicon/facebook.svg" alt="Facebook" />
+                    <svg class="social-icons-svg" width="20" height="20">
+                      <use href="./img/icomoon/sprite.svg#icon-facebook"></use>
+                    </svg>
                   </a>
                 </li>
                 <li class="social-list-item">
@@ -367,8 +381,10 @@
                     href=""
                     aria-label="Ссылка на LinkID"
                   >
-                    <img src="./img/socialicon/linkedin.svg" alt="LinkID"
-                  /></a>
+                    <svg class="social-icons-svg" width="20" height="20">
+                      <use href="./img/icomoon/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
