--- a/portfolio.html
+++ b/portfolio.html
@@ -38,26 +38,31 @@
         <div class="header-contacts">
           <ul class="contacts-ul">
             <li class="contacts-item">
-              <svg class="contacts-icon">
-                <use href="./img/icomoon/sprite.svg#icon-envelope-hover"></use>
-              </svg>
-              <a href="mailto:info@devstudio.com" class="contacts-item-link"
-                >info@devstudio.com</a
+              <a href="mailto:info@devstudio.com" class="contacts-item-link">
+                <svg class="contacts-icon">
+                  <use
+                    href="./img/icomoon/sprite.svg#icon-envelope-hover"
+                  ></use>
+                </svg>
+                info@devstudio.com</a
               >
             </li>
+
             <li class="contacts-item">
-              <svg class="contacts-icon">
-                <use href="./img/icomoon/sprite.svg#icon-smartphone"></use>
-              </svg>
-              <a href="tel:380961111111" class="contacts-item-link"
-                >+38 096 111 11 11</a
+              <a href="tel:380961111111" class="contacts-item-link">
+                <svg class="contacts-icon">
+                  <use href="./img/icomoon/sprite.svg#icon-smartphone"></use>
+                </svg>
+                +38 096 111 11 11</a
               >
             </li>
           </ul>
         </div>
       </div>
     </header>
+
     <!--Блок main-->
+
     <main>
       <section class="portfolio-section">
         <div class="container">
