--- a/index.html
+++ b/index.html
@@ -400,33 +400,52 @@
           <ul class="customers-list list">
             <li class="ctmrs-list-item">
               <a class="ctmrs-logo" href="#">
-                <img src="./img/customers/logo-1.svg" alt="YA&CO" />
+                <svg class="customers-icon" width="45" height="49">
+                  <use href="./img/icomoon/sprite.svg#icon-logo-1"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="ctmrs-list-item">
+              <a class="ctmrs-logo" href="#">
+                <svg class="customers-icon" width="45" height="49">
+                  <use href="./img/icomoon/sprite.svg#icon-logo-2"></use>
+                </svg>
+                /></a
+              >
+            </li>
+
+            <li class="ctmrs-list-item">
+              <a class="ctmrs-logo" href="#">
+                <svg class="customers-icon" width="45" height="49">
+                  <use href="./img/icomoon/sprite.svg#icon-logo-3"></use>
+                </svg>
+                /></a
+              >
+            </li>
+
+            <li class="ctmrs-list-item">
+              <a class="ctmrs-logo" href="#">
+                <svg class="customers-icon" width="80" height="44">
+                  <use href="./img/icomoon/sprite.svg#icon-logo-4"></use>
+                </svg>
               </a>
             </li>
             <li class="ctmrs-list-item">
               <a class="ctmrs-logo" href="#">
-                <img src="./img/customers/logo-2.svg" alt="Company"
-              /></a>
+                <svg class="customers-icon" width="59" height="47">
+                  <use href="./img/icomoon/sprite.svg#icon-logo-5"></use>
+                </svg>
+                /></a
+              >
             </li>
             <li class="ctmrs-list-item">
               <a class="ctmrs-logo" href="#">
-                <img src="./img/customers/logo-3.svg" alt="Company"
-              /></a>
-            </li>
-            <li class="ctmrs-list-item">
-              <a class="ctmrs-logo" href="#">
-                <img src="./img/customers/logo-4.svg" alt="Foster Peters"
-              /></a>
-            </li>
-            <li class="ctmrs-list-item">
-              <a class="ctmrs-logo" href="#">
-                <img src="./img/customers/logo-5.svg" alt="Brand"
-              /></a>
-            </li>
-            <li class="ctmrs-list-item">
-              <a class="ctmrs-logo" href="#">
-                <img src="./img/customers/logo-6.svg" alt="Company Tag Line"
-              /></a>
+                <svg class="customers-icon" width="89" height="45">
+                  <use href="./img/icomoon/sprite.svg#icon-logo-6"></use>
+                </svg>
+                /></a
+              >
             </li>
           </ul>
         </div>
