--- a/portfolio.html
+++ b/portfolio.html
@@ -306,7 +306,9 @@
                 href="#"
                 aria-label="Ссылка на Instagram"
               >
-                <img src="./img/footericon/instagram.svg" alt="Instagram" />
+                <svg class="footer-social-icon" width="20" height="20">
+                  <use href="./img/icomoon/sprite.svg#icon-instagram"></use>
+                </svg>
               </a>
             </li>
             <li class="footer-social-list-item">
@@ -315,7 +317,9 @@
                 href="/"
                 aria-label="Ссылка на Tvitter"
               >
-                <img src="./img/footericon/twitter.svg" alt="Tvitter" />
+                <svg class="footer-social-icon" width="20" height="20">
+                  <use href="./img/icomoon/sprite.svg#icon-twitter"></use>
+                </svg>
               </a>
             </li>
             <li class="footer-social-list-item">
@@ -323,7 +327,10 @@
                 class="footer-social-wrapper"
                 href="/"
                 aria-label="Ссылка на Facebook"
-                ><img src="./img/footericon/facebook.svg" alt="Facebook" />
+              >
+                <svg class="footer-social-icon" width="20" height="20">
+                  <use href="./img/icomoon/sprite.svg#icon-facebook"></use>
+                </svg>
               </a>
             </li>
             <li class="footer-social-list-item">
@@ -331,7 +338,9 @@
                 class="footer-social-wrapper"
                 href="/"
                 aria-label="Ссылка на LinkID"
-                ><img src="./img/footericon/linkedin.svg" alt="LinkID" />
+                ><svg class="footer-social-icon" width="20" height="20">
+                  <use href="./img/icomoon/sprite.svg#icon-linkedin"></use>
+                </svg>
               </a>
             </li>
           </ul>
@@ -349,11 +358,10 @@
               /></span>
             </form>
             <button class="footer-btn" type="submit">
-              Подписаться<img
-                class="icon-send"
-                src="./img/footericon/icon-send.svg"
-                alt="icon-send"
-              />
+              Подписаться
+              <svg class="icon-send" width="24" height="24">
+                <use href="./img/icomoon/sprite.svg#icon-icon-send"></use>
+              </svg>
             </button>
           </div>
         </div>
