доробив box-shadov для портфоліо

--- a/portfolio.html
+++ b/portfolio.html
@@ -68,23 +68,23 @@
         <div class="container">
           <h1 hidden>Фильтр работ</h1>
           <ul class="portfolio-list list">
-            <li class="portfolio-list-bnt">
+            <li class="portfolio-list-btn">
               <button type="button" class="portfolio-modal-btn">Все</button>
             </li>
-            <li class="portfolio-list-bnt">
+            <li class="portfolio-list-btn">
               <button type="button" class="portfolio-modal-btn">
                 Веб-сайты
               </button>
             </li>
-            <li class="portfolio-list-bnt">
+            <li class="portfolio-list-btn">
               <button type="button" class="portfolio-modal-btn">
                 Приложения
               </button>
             </li>
-            <li class="portfolio-list-bnt">
+            <li class="portfolio-list-btn">
               <button type="button" class="portfolio-modal-btn">Дизайн</button>
             </li>
-            <li class="portfolio-list-bnt">
+            <li class="portfolio-list-btn">
               <button type="button" class="portfolio-modal-btn">
                 Маркетинг
               </button>
