--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <ul class="contacts-ul">
             <li class="contacts-item">
               <a href="mailto:info@devstudio.com" class="contacts-item-link">
-                <svg class="contacts-icon">
+                <svg class="contacts-icon" width="16" height="12">
                   <use
                     href="./img/icomoon/sprite.svg#icon-envelope-hover"
                   ></use>
@@ -49,7 +49,7 @@
             </li>
             <li class="contacts-item">
               <a href="tel:380961111111" class="contacts-item-link">
-                <svg class="contacts-icon">
+                <svg class="contacts-icon" width="10" height="15">
                   <use href="./img/icomoon/sprite.svg#icon-smartphone"></use>
                 </svg>
                 +38 096 111 11 11</a
